--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="wrapper">
+            <div class="header_wrapper">
+                <div class="header_logo">
+                    <h1 class="header_logo_text">Art Museum</h1>
+                </div>
+                <nav class="header_nav">
+                    <ul class="header_list">
+                        <li class="header_icon">
+                            <a href="" class="intagram">
+                                <img src="assets/insta.svg" alt="instagram" />
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
