add picture and basic styles

--- a/index.html
+++ b/index.html
@@ -5,25 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art Museum</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
         <div class="wrapper">
             <div class="header_wrapper">
-                <div class="header_logo">
-                    <h1 class="header_logo_text">Art Museum</h1>
-                </div>
                 <nav class="header_nav">
                     <ul class="header_list">
-                        <li class="header_icon">
-                            <a href="" class="intagram">
+                        <li class="header_item">
+                            <a href="" class="header_icon">
                                 <img src="assets/insta.svg" alt="instagram" />
+                            </a>
+                        </li>
+                        <li class="header_icon">
+                            <a href="" class="header_icon">
+                                <img src="assets/twitter.svg" alt="twitter" />
+                            </a>
+                        </li>
+                        <li class="header_icon">
+                            <a href="" class="header_icon">
+                                <img src="assets/youtube.svg" alt="youtube" />
+                            </a>
+                        </li>
+                        <li class="header_icon">
+                            <a href="" class="header_icon">
+                                <img src="assets/linkedin.svg" alt="linked" />
                             </a>
                         </li>
                     </ul>
                 </nav>
+                <div class="header_logo">
+                    <h1 class="header_logo_text">Art Museum</h1>
+                </div>
+                <div class="header_burger">
+                    <img src="assets/Hamburger.svg" alt="" class="burger">
+                </div>
             </div>
         </div>
     </header>
