--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="main">
         <div class="wrapper">
         <section class="intro">
-            <h1 class="into_title">Welcome to Art Museum</h1>
+            <h1 class="intro_title">Welcome to Art Museum</h1>
             <p class="intro_subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse natus sapiente nisi facilis vero quaerat, pariatur vitae cumque repudiandae adipisci, quis assumenda, ducimus neque voluptate possimus saepe odit voluptatibus animi?</p>
             <button class="intro_button">Buy Ticket</button>
             <img src="assets/kelly-kiernan-AJQtQULWKQI-unsplash 1.jpg" alt="title" class="intro_img">
