--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
                                 <img src="assets/insta.svg" alt="instagram" />
                             </a>
                         </li>
-                        <li class="header_icon">
+                        <li class="header_item">
                             <a href="" class="header_icon">
                                 <img src="assets/twitter.svg" alt="twitter" />
                             </a>
                         </li>
-                        <li class="header_icon">
+                        <li class="header_item">
                             <a href="" class="header_icon">
                                 <img src="assets/youtube.svg" alt="youtube" />
                             </a>
                         </li>
-                        <li class="header_icon">
+                        <li class="header_item">
                             <a href="" class="header_icon">
                                 <img src="assets/linkedin.svg" alt="linked" />
                             </a>
@@ -37,7 +37,7 @@
                     </ul>
                 </nav>
                 <div class="header_logo">
-                    <h1 class="header_logo_text">Art Museum</h1>
+                    <img src="assets/Logo.svg" alt="Logo">
                 </div>
                 <div class="header_burger">
                     <img src="assets/Hamburger.svg" alt="" class="burger">
