add footer menu and footer logo

--- a/index.html
+++ b/index.html
@@ -49,11 +49,22 @@
         <div class="wrapper">
         <section class="intro">
             <h1 class="intro_title">Welcome to Art Museum</h1>
-            <p class="intro_subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse natus sapiente nisi facilis vero quaerat, pariatur vitae cumque repudiandae adipisci, quis assumenda, ducimus neque voluptate possimus saepe odit voluptatibus animi?</p>
+            <p class="intro_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <button class="intro_button">Buy Ticket</button>
+            <div class="intro_pic">
             <img src="assets/kelly-kiernan-AJQtQULWKQI-unsplash 1.jpg" alt="title" class="intro_img">
+        </div>
         </section>
     </div>
-    </main>
+</main>
+<footer class="footer">
+    <div class="wrapper">
+        <div class="footer_item">
+            <div class="footer_logo">
+                <img src="assets/Logo.svg">
+            </div>
+        </div> 
+    </div>
+</footer>
 </body>
 </html>
