add footer links

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
             <div class="footer_logo">
                 <img src="assets/Logo.svg">
             </div>
+            <ul class="footer_menu">
+                <li class="menu_item">
+                    <a href="" class="menu_link">YouTube</a>
+                    <a href="" class="menu_link">Instagram</a>
+                    <a href="" class="menu_link">Twitter</a>
+                    <a href="" class="menu_link">Linkedin</a>
+                </li>
+            </ul>
         </div> 
     </div>
 </footer>
