add paintings section

--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
             <h1 class="intro_title">Welcome to Art Museum</h1>
             <p class="intro_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <button class="intro_button">Buy Ticket</button>
-            <div class="intro_pic">
             <img src="assets/kelly-kiernan-AJQtQULWKQI-unsplash 1.jpg" alt="title" class="intro_img">
-        </div>
         </section>
     </div>
 </main>
+<div class ="wrapper">
+    <section class="paintings">
+        
+    </section>
+</div>
 <footer class="footer">
     <div class="wrapper">
         <div class="footer_item">
