add paintings images and column

--- a/index.html
+++ b/index.html
@@ -57,7 +57,57 @@
 </main>
 <div class ="wrapper">
     <section class="paintings">
-        
+        <h1 class="paintings_title">Paintings</h1>
+        <div class="paintings_card">
+            <div class="grid_card">
+                <img src="assets/girl-with-a-pearl-earring-the-famous-painting-2 1.jpg" alt="" class="card_img">
+                <p class="card_title">Johannes Vermeer, Girl with a Pearl Earring, 1665</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/1200px-Sandro_Botticelli_-_La_nascita_di_Venere_-_Google_Art_Project_-_edited 1.jpg" alt="" class="card_img">
+                <p class="card_title">Sandro Botticelli, The Birth of Venus, 1484–1486</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/757px-Van_Gogh_-_Starry_Night_-_Google_Art_Project 1.jpg" alt="" class="card_img">
+                <p class="card_title">Vincent van Gogh, The Starry Night, 1889</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/The-Kiss 1.jpg" alt="" class="card_img">
+                <p class="card_title">Gustav Klimt, The Kiss, 1907–1908</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/the-garden-of-earthly-delights-ii 1.jpg" alt="" class="card_img">
+                <p class="card_title">Hieronymus Bosch, The Garden of Earthly Delights, 1503–1515</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/image-2020-03-09T123556 1.jpg" alt="" class="card_img">
+                <p class="card_title">Pablo Picasso, Les Demoiselles d’Avignon, 1907</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/1024px-Pieter_Bruegel_the_Elder-_The_Harvesters_-_Google_Art_Project 1.jpg" alt="" class="card_img">
+                <p class="card_title">Pieter Bruegel the Elder, The Harvesters, 1565</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/Goya_Maja_naga2 1.jpg" alt="" class="card_img">
+                <p class="card_title">Francisco de Goya y Lucientes, The Naked Maja, circa 1797–1800</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/Jean_Auguste_Dominique_Ingres,_La_Grande_Odalisque,_1814 1.jpg" alt="" class="card_img">
+                <p class="card_title">Jean Ingres, Grande Odalisque, 1814</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/804px-The_Scream 1.jpg" alt="" class="card_img">
+                <p class="card_title">Edvard Munch, The Scream,1893</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/739953613 1.jpg" alt="" class="card_img">
+                <p class="card_title">Édouard Manet, Olympia, 1863</p>
+            </div>
+            <div class="grid_card">
+                <img src="assets/Без названия 1.jpg" alt="" class="card_img">
+                <p class="card_title">Caspar David Friedrich, Wanderer above the Sea of Fog, 1819</p>
+            </div>
+        </div>
     </section>
 </div>
 <footer class="footer">
