add button in paintings section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <div class ="wrapper">
     <section class="paintings">
         <h1 class="paintings_title">Paintings</h1>
+        <p class="button_title">Sort by</p>
+        <button class="sort_btn">Name</button>
         <div class="paintings_card">
             <div class="grid_card">
                 <img src="assets/girl-with-a-pearl-earring-the-famous-painting-2 1.jpg" alt="" class="card_img">
