add grid columns for paintings

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <img src="assets/girl-with-a-pearl-earring-the-famous-painting-2 1.jpg" alt="" class="card_img">
                 <p class="card_title">Johannes Vermeer, Girl with a Pearl Earring, 1665</p>
             </div>
+            <div class="top_cards">
             <div class="grid_card">
                 <img src="assets/1200px-Sandro_Botticelli_-_La_nascita_di_Venere_-_Google_Art_Project_-_edited 1.jpg" alt="" class="card_img">
                 <p class="card_title">Sandro Botticelli, The Birth of Venus, 1484–1486</p>
@@ -81,6 +82,8 @@
                 <img src="assets/the-garden-of-earthly-delights-ii 1.jpg" alt="" class="card_img">
                 <p class="card_title">Hieronymus Bosch, The Garden of Earthly Delights, 1503–1515</p>
             </div>
+        </div>
+        <div class="bottom_cards">
             <div class="grid_card">
                 <img src="assets/image-2020-03-09T123556 1.jpg" alt="" class="card_img">
                 <p class="card_title">Pablo Picasso, Les Demoiselles d’Avignon, 1907</p>
@@ -105,6 +108,7 @@
                 <img src="assets/739953613 1.jpg" alt="" class="card_img">
                 <p class="card_title">Édouard Manet, Olympia, 1863</p>
             </div>
+        </div>
             <div class="grid_card">
                 <img src="assets/Без названия 1.jpg" alt="" class="card_img">
                 <p class="card_title">Caspar David Friedrich, Wanderer above the Sea of Fog, 1819</p>
