add footer links

--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
                     <a href="" class="menu_link">Linkedin</a>
                 </li>
             </ul>
+            <ul class="footer_links">
+                <li class="menu_links">
+                    <a href="" class="links_menu">Home</a>
+                    <a href="" class="links_menu">Paintings</a>
+                    <a href="" class="links_menu">Buy Ticket</a>
+                    <a href="" class="links_menu">Contacts</a>
+                </li>
+            </ul>
         </div> 
     </div>
 </footer>
