add designer name

--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
                 <li class="menu_links">
                     <a href="" class="links_menu">Home</a>
                     <a href="" class="links_menu">Paintings</a>
-                    <a href="" class="links_menu">Buy Ticket</a>
+                    <a href="" class="links_menu">Buy ticket</a>
                     <a href="" class="links_menu">Contacts</a>
                 </li>
+                <p class="design">Designed by Novyk Aliona, 2021</p>
             </ul>
         </div> 
     </div>
