feat: add button group

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
 <div class ="wrapper">
     <section class="paintings">
         <h1 class="paintings_title">Paintings</h1>
-        <p class="button_title">Sort by</p>
-        <button class="sort_btn">Name</button>
+        <label for="button_title">Sort by</label>
+        <select name="cars" id="cars">
+            <option value="volvo">Name</option>
+            <option value="saab">Autor</option>
+        </select>
         <div class="paintings_card">
             <div class="grid_card">
                 <img src="assets/girl-with-a-pearl-earring-the-famous-painting-2 1.jpg" alt="" class="card_img">
