refactor: rename classes

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <div class ="wrapper">
     <section class="paintings">
         <h1 class="paintings_title">Paintings</h1>
-        <label for="button_title">Sort by</label>
-        <select name="cars" id="cars">
-            <option value="volvo">Name</option>
-            <option value="saab">Autor</option>
+        <label for="button_title" class="button_title">Sort by</label>
+        <select name="sort" class="sort">
+            <option value="name">Name</option>
+            <option value="autor">Autor</option>
         </select>
         <div class="paintings_card">
             <div class="grid_card">
