feat: add project files

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </ul>
                 </nav>
                 <div class="header_logo">
-                    <img src="assets/Logo.svg" alt="Logo">
+                    <img src="assets/Logo.svg" alt="Logo" class="logo">
                 </div>
                 <div class="header_burger">
                     <img src="assets/Hamburger.svg" alt="" class="burger">
